--- a/css/main.css
+++ b/css/main.css
@@ -2,14 +2,68 @@ a:link {text-decoration: none;color:#000000;}
 a:visited {text-decoration: none;color:#000000;}
 a:active {text-decoration: none;color:#000000;}
 
+.red{
+	background-color: #ffe2e1  !important;
+}
+.green{
+	background-color: #e1ffe2  !important;
+}
+.white{
+	background-color: white !important;
+}
 
 hr{
 	height: 1px;
-    margin: 0 0 0 0px;
 	border-top: 1px solid #ddd;
+	margin: 5px 0px 5px 0px;
 }
+
+h1{
+	font-size: 12px;
+}
+h4{
+	font-size: 14px;
+	font-weight: bold;
+	padding: 2px 2px 2px 0px;
+}
+
+.hrMargin hr{
+	margin: 5px -19px 5px -19px;
+}
+
+.logo{
+	padding: 2px 5px 2px 5px;
+}
+
+.symbolPadding{
+	padding: 12px 2px 2px 10px;
+}
+
+.verticalHR{
+	margin: -6px 0px -5px 0px;
+	border-right: 1px solid #ddd;
+	height: 80px;
+}
+
+.columnNumero{
+	padding-right: 0px;
+	padding-left: 5px !important;
+	color: #428bca;
+	font-size: 18px;
+	font-weight: bold;
+}
+
+.decalLeft{
+	margin-left: -5px;
+}
+
+.detail{
+	font-size: small;
+}
+
 .fontSmall{
 	font-size: small;
+	color: #428bca;
 }
 .smallFont{
 	font-size: x-small;
@@ -19,11 +73,20 @@ hr{
 	width: 40px;
 }
 
+.symbolName{
+	color: #428bca;
+	font-size: 14px;
+	font-weight: bold;
+}
+
 
 .fa-cog {
   color: red;
 }
 
+.modal-body div{
+	padding: 0px 2px 0px 5px;
+}
 .columnCenter{
 		text-align: center;
 }
@@ -38,13 +101,11 @@ hr{
 }
 
 
-.detail{
-	font-size: small;
-}
+
 
 .label{
+	font-weight: normal;
 	color: #000;
-	font-weight: bold;
 }
 .value{
 	color: #000;
@@ -74,6 +135,7 @@ hr{
 	margin: 8px;
 	padding: 4px;
 	width: 300px; 
+
 }
 
 .btnPannelCurrencie{
@@ -84,10 +146,10 @@ hr{
 }
 
 .btnActionCurrencie{
-	width:	40px;
-	height: 40px;
-	margin: 4px 0px 0px 0px;
-	padding: 4px;
+	width:	30px;
+	height: 30px;
+	margin: 2px 0px 0px 0px;
+	padding: 2px;
 }
 
 
