--- a/css/sb-admin-2.css
+++ b/css/sb-admin-2.css
@@ -6,6 +6,7 @@
 
 body {
     background-color: #f8f8f8;
+	font-family: 'Helvetica Neue',Helvetica,Arial,sans-serif;
 }
 
 #wrapper {
@@ -92,7 +93,7 @@ body {
 }
 
 .huge {
-    font-size: 40px;
+    font-size: 18px;
 }
 
 .panel-blue {
