--- a/css/main.css
+++ b/css/main.css
@@ -35,8 +35,8 @@ h4{
 	padding: 2px 5px 2px 5px;
 }
 
-.symbolPadding{
-	padding: 12px 2px 2px 10px;
+.divPadding{
+	padding: 12px 0px 0px 15px;
 }
 
 .verticalHR{
@@ -87,6 +87,11 @@ h4{
 .modal-body div{
 	padding: 0px 2px 0px 5px;
 }
+.modal-body .form-row{
+	display: inline !important;
+	width: 50px;
+}
+
 .columnCenter{
 		text-align: center;
 }
@@ -309,4 +314,8 @@ body {
   background-color: transparent;
 }
 
+/********************************************** file upload ***********************************************/
 
+input[type="file"] {
+    display: none;
+}
