--- a/css/main.css
+++ b/css/main.css
@@ -125,12 +125,14 @@ h4{
 /********************************************** currencies ***********************************************/
 
 .currencieDetail{
+	width: 300px; 
+}
+.currencieDetailLook{
+	margin: 8px;
+	padding: 4px;
 	background-color: white;
 	border: 1px solid #ccc;
 	border-radius: 8px;
-	margin: 8px;
-	padding: 4px;
-	width: 300px; 
 }
 
 .box{
