--- a/css/main.css
+++ b/css/main.css
@@ -102,10 +102,11 @@ h4{
 .label{
 	font-weight: normal;
 	color: #000;
+	font-size: 85%;
 }
 .value{
 	color: #000;
-	font-size: x-small;
+	font-size: 85%;
 }
 
 .nopadding {
@@ -124,12 +125,31 @@ h4{
 
 /********************************************** currencies ***********************************************/
 
+#infoMarket{
+	padding-left: 10px;
+}
+
+#cow{
+	width: 300px; 
+	height: 250px;
+	padding: 0px !important;
+	margin-right: 15px !important;
+}
+
 .currencieDetail{
 	width: 300px; 
+	height: 220px;
 }
+
+.currencieDetailSmall{
+	width: 300px; 
+	height: 106px;
+	padding-top: 15px !important;
+}
+
 .currencieDetailLook{
 	margin: 8px;
-	padding: 4px;
+	padding: 6px;
 	background-color: white;
 	border: 1px solid #ccc;
 	border-radius: 8px;
