--- a/css/main.css
+++ b/css/main.css
@@ -114,6 +114,41 @@ h4{
    margin: 0px !important;
 }
 
+
+/********************************************** headerBloc ***********************************************/
+
+#containerIntro h1,
+#containerIntro p {
+    display: inline;
+    vertical-align: top;
+    font-family: 'Open Sans', sans-serif;
+    font-size: 16px;
+    line-height: 28px;
+	 color: #fffff9;
+}
+
+#title{
+	width: 250px;
+	padding: 5px;
+}
+
+.fieldsetToggler{
+	display:none;
+}
+
+/********************************************** quickview ***********************************************/
+
+#quickView{
+	font-size: 12px;
+}
+
+#quickViewScroll{
+	overflow-y: scroll; 
+	width: 300px;
+	height:120px;
+}
+
+
 /********************************************** add currencie ***********************************************/
 
 .favorite{
@@ -198,55 +233,6 @@ h4{
 	margin-top: 0px;
 }
 
-/********************************************** sponsoredCoin ***********************************************/
-
-.square{
-	width: 100px;
-	height: 100px;
-	background-color: white;
-}
-
-#sponsoredCoin{
-	width: 100%;
-	height: 100px;
-	padding: 5px 5px;
-	border: 1px solid black;
-}
-#sponsoredCoin a{
-	padding: 0px 5px 0px 5px;
-}	
-#sponsoredCoin img{
-	padding: 2px 2px 2px 2px;
-}
-#sponsoredCoin .sponsored{
-	font-size: xx-small;
-}
-
-/********************************************** pub ***********************************************/
-
-#zonePub1{
-	height: 110px;
-	padding: 5px 5px;
-}
-
-#coinTrafficTop{
-	margin: 0 auto;
-	width: 728px;
-	height: 100px;
-	border: 1px solid black;
-}
-
-#zonePub2{
-	width: 336px;
-	height: 280px;
-	position: fixed;
-	bottom: 10px;
-	right: 10px;
-	background-color: white;
-	border: 1px solid black;
-}
-
-
 
 /********************************************** chart ***********************************************/
 
@@ -329,17 +315,7 @@ body {
 
 }
 
-/********************************************** headerBloc ***********************************************/
 
-#containerIntro h1,
-#containerIntro p {
-    display: inline;
-    vertical-align: top;
-    font-family: 'Open Sans', sans-serif;
-    font-size: 16px;
-    line-height: 28px;
-	 color: #fffff9;
-}
 
 /********************************************** angular ***********************************************/
 
