--- a/css/main.css
+++ b/css/main.css
@@ -133,7 +133,7 @@ h4{
 }
 
 .fieldsetToggler{
-	display:none;
+	display:block;
 }
 
 /********************************************** bloc ***********************************************/
