--- a/css/main.css
+++ b/css/main.css
@@ -176,6 +176,12 @@ h4{
 	font-size: 12px;
 }
 
+/********************************************** fieldset ***********************************************/
+
+#mainBoard fieldset{
+	
+}
+
 
 /********************************************** add currencie ***********************************************/
 
