--- a/pages/templates/blocInfos.html
+++ b/pages/templates/blocInfos.html
@@ -1,10 +1,6 @@
 
-<div class="symbolName color1">
-  <a 	href="https://coinmarketcap.com/currencies/{{ currencie.id }}/" 
-  target="_blank" 
-  title="coinmarketcap : {{ titre1 | uppercase}}">
-    {{ data1 }} {{ data2 }}
-  </a>
+<div class="color1">
+    {{ data1 }} 
 </div>
 
 <div>
@@ -14,9 +10,15 @@
   <span class="fontSmall color2" ng-show="price2>0.001">({{ price2 | setDecimal:2 }} $) </span>
 </div>
 
+<div class="color1">
+    {{ data2 }}
+</div>
+
 <div>
-    <span class="xfontSmall" ng-style="{ 'color': percent1 < 0 ? 'red' : 'green' }">{{ percent1 }} %</span>	
-    /<span class="xfontSmall" ng-style="{ 'color': percent2 < 0 ? 'red' : 'green' }">{{ percent2 }} %</span>
-    /<span class="xfontSmall" ng-style="{ 'color': percent3 < 0 ? 'red' : 'green' }">{{ percent3 }} %</span>
+    <span class="xfontSmall" ng-style="{ 'color': percent1 < 0 ? 'red' : 'green' }" ng-show="percent1!=null">{{ percent1 }} %</span>	
+    <span class="xfontSmall" ng-show="percent2!=null">/</span>
+    <span class="xfontSmall" ng-style="{ 'color': percent2 < 0 ? 'red' : 'green' }" ng-show="percent2!=null">{{ percent2 }} %</span>
+    <span class="xfontSmall" ng-show="percent3!=null">/</span>
+    <span class="xfontSmall" ng-style="{ 'color': percent3 < 0 ? 'red' : 'green' }" ng-show="percent3!=null">{{ percent3 }} %</span>
 </div>
 
