--- a/css/main.css
+++ b/css/main.css
@@ -16,6 +16,10 @@ hr{
 h1{
 	font-size: 12px;
 }
+h3{
+    padding: 5px 0 0 0;
+    margin: 0px;
+}
 h4{
 	font-size: 14px;
 	font-weight: bold;
@@ -77,9 +81,6 @@ h4{
 .link{
 	cursor: pointer;
 }
-
-
-
 
 .label{
 	font-weight: bold;
@@ -164,14 +165,18 @@ h4{
 	padding: 5px;
 }
 
-.fieldsetToggler{
-	display:block;
-}
-
 /********************************************** bloc ***********************************************/
 
 .blocCurrencie{
 	width: 300px; 
+}
+
+.blocLook{
+	margin: 8px;
+	padding: 6px;
+	background-color: white;
+	border: 1px solid #ccc;
+	border-radius: 8px;
 }
 
 /*medium+ screen sizes*/
@@ -192,19 +197,6 @@ h4{
 	}	
 }
 
-.blocSmall{
-	width: 300px; 
-	height: 70px;
-	padding-top: 3px !important;
-}
-
-.blocLook{
-	margin: 8px;
-	padding: 6px;
-	background-color: white;
-	border: 1px solid #ccc;
-	border-radius: 8px;
-}
 
 
 /********************************************** quickview ***********************************************/
