--- a/pages/templates/coinInfos.html
+++ b/pages/templates/coinInfos.html
@@ -3,10 +3,16 @@
         <div class="col-xs-5" ng-show="optionLabels">Price</div>
         <div ng-class="{col-xs-7: optionLabels, col-xs-12: !optionLabels}" >{{ currencie.price_btc | limitTo:12 }} <i class="fa fa-btc  fa"></i></div>
 
-        <div class="col-xs-5" ng-show="optionLabels">Price</div>
+        
+        <div class="col-xs-5" ng-show="optionLabels"></div>
         <div class="col-xs-7" ng-class="{col-xs-7: optionLabels, col-xs-12: !optionLabels}" ng-show="{{ currencie.price_usd<0.001 }}">{{ currencie.price_usd | setDecimal:6 }} <i class="fa fa-usd  fa"></i></div>
         <div class="col-xs-7" ng-class="{col-xs-7: optionLabels, col-xs-12: !optionLabels}" ng-show="{{ currencie.price_usd>0.001 }}">{{ currencie.price_usd | setDecimal:2 }} <i class="fa fa-usd  fa"></i></div>    
-        
+
+        <div class="col-xs-5" ng-show="optionLabels">My invesment</div>
+        <div class="col-xs-7" ng-class="{col-xs-7: optionLabels, col-xs-12: !optionLabels}" >{{ currencie.valueBtc | setDecimal:5 }} <i class="fa fa-btc  fa"></i></div>
+
+        <div class="col-xs-5" ng-show="optionLabels"></div>
+        <div class="col-xs-7" ng-class="{col-xs-7: optionLabels, col-xs-12: !optionLabels}" >{{ currencie.valueDollars | setDecimal:2 }} <i class="fa fa-usd  fa"></i></div>
 
         <div ng-show="optionDetails==3">
                 <div class="col-xs-5" ng-show="optionLabels">MCap</div>
@@ -29,11 +35,6 @@
                 <div class="col-xs-7" ng-class="{col-xs-7: optionLabels, col-xs-12: !optionLabels}" >{{ currencie.balance }} {{ currencie.symbol }} </div>
         </div>
 
-        <div class="col-xs-5" ng-show="optionLabels">My invesment</div>
-        <div class="col-xs-7" ng-class="{col-xs-7: optionLabels, col-xs-12: !optionLabels}" >{{ currencie.valueBtc | setDecimal:5 }} <i class="fa fa-btc  fa"></i></div>
-
-        <div class="col-xs-5" ng-show="optionLabels">My invesment</div>
-        <div class="col-xs-7" ng-class="{col-xs-7: optionLabels, col-xs-12: !optionLabels}" >{{ currencie.valueDollars | setDecimal:2 }} <i class="fa fa-usd  fa"></i></div>
 
 </div>
 
