--- a/css/main.css
+++ b/css/main.css
@@ -34,6 +34,10 @@ h4{
 	padding: 12px 0px 0px 15px;
 }
 
+.marginTopBottom{
+	margin: 3px 0 3px 0;
+}
+
 .verticalHR{
 	margin: -6px 0px -5px 0px;
 	border-right: 1px solid #ddd;
@@ -122,6 +126,12 @@ h4{
 .color2{
 	color: #ABA782 !important;
 }
+.colorHelp{
+	color: #000000 !important;
+	background-color: #cceeff;
+	border: 1px solid #ccc;
+	border-radius: 8px;
+}
 .backColor1{
 	background-color: #57A29A !important;
 }
@@ -145,7 +155,6 @@ h4{
     padding: 0;
 	width: 40px;
 }
-
 
 
 /********************************************** headerBloc ***********************************************/
