--- a/css/main.css
+++ b/css/main.css
@@ -1,3 +1,6 @@
+a {
+	color: #anycolor !important;
+	}
 a:link {text-decoration: none;}
 a:visited {text-decoration: none;}
 a:active {text-decoration: none;}
@@ -28,10 +31,6 @@ h4{
 
 .logo{
 	padding: 2px 5px 2px 5px;
-}
-
-.divPadding{
-	padding: 12px 0px 0px 15px;
 }
 
 .marginTopBottom{
@@ -96,10 +95,20 @@ h4{
 	font-size: 85%;
 }
 
-.nopadding {
+/********************************************** font ***********************************************/
+
+.noPadding {
    padding: 0px !important;
    margin: 0px !important;
 }
+
+.smallPadding {
+	padding: 3px !important;
+ }
+
+ .mediumPadding {
+	padding: 6px !important;
+ }
 
 
 /********************************************** font ***********************************************/
