--- a/pages/templates/coinHeader.html
+++ b/pages/templates/coinHeader.html
@@ -1,17 +1,47 @@
-<div class="row" >
-        <div class="col-xs-6">
+
+        <div class="col-xs-3 logo">
                 <a 	href="https://coinmarketcap.com/currencies/{{ currencie.id }}/" 
                 target="_blank" 
                 title="coinmarketcap : {{ currencie.symbol | uppercase}}">
-                        <img ng-src="{{ currencie.png }}"  title="{{ currencie.name }}"> 
+                        <img ng-src="{{ currencie.png32 }}"  title="{{ currencie.name }}" ng-show="optionDetails==1"> 
+                        <img ng-src="{{ currencie.png }}"  title="{{ currencie.name }}" ng-show="optionDetails==2"> 
                 </a>
         </div>
 
-        <div class="col-xs-6 symbolName color1">
-                <a 	href="https://coinmarketcap.com/currencies/{{ currencie.id }}/" 
+        <div class="col-xs-6 smallPadding">
+                <a  href="https://coinmarketcap.com/currencies/{{ currencie.id }}/" 
                 target="_blank" 
-                title="coinmarketcap : {{ titre1 | uppercase}}">
-                {{ currencie.symbol | uppercase}} ({{ currencie.name }})
+                title="coinmarketcap : {{ titre1 | uppercase}}"
+                class="symbolName color1">
+                {{ currencie.symbol | uppercase}} 
                 </a>
+                <div class="color2" ng-show="optionDetails==2">({{ currencie.name }})</div>
+                <coin-infos currencie="{{currencie}}" ng-show="optionDetails==1"/>
         </div>
-</div>
+
+        <div class="col-xs-3 noPadding">
+                <div 
+                        ng-class="(currencie.alertMin!=null && currencie.alertMin > currencie.price_btc)?'alert_red':(currencie.alertMax!=null && currencie.alertMax < currencie.price_btc)?'alert_green':'alert_white'"
+                        class="btn btn-default navbar-btn btnActionCurrencie">
+                                <i class="fa fa-bell-o" ng-show="(currencie.alertMin !=null) || (currencie.alertMax!=null)"></i>
+                </div>
+                
+                        
+                <button 
+                        type="button" 
+                        data-toggle="modal" 
+                        data-target="#myModal" 
+                        ng-click="setSelectedCurrencie(currencie)"
+                        class="btn btn-default navbar-btn btnActionCurrencie">
+                        <i class="fa fa-plus-square-o fa"></i>
+                </button>
+        
+                <button 
+                        type="button" 
+                        data-toggle="modal" 
+                        data-target="#myModalDelete" 
+                        ng-click="setSelectedCurrencie(currencie)"
+                        class="btn btn-default navbar-btn btnActionCurrencie">
+                        <i class="fa fa-trash  fa"></i>
+                </button>                
+        </div>
