--- a/css/main.css
+++ b/css/main.css
@@ -119,11 +119,11 @@ h4{
 }
 
 .xfontSmall{
-	font-size: x-small;
+	font-size: 12px;
 }
 
 .fontSmall{
-	font-size: small;
+	font-size: 14px;
 }
 
 /********************************************** color ***********************************************/
