--- a/pages/templates/coinHeader.html
+++ b/pages/templates/coinHeader.html
@@ -16,7 +16,7 @@
                 {{ currencie.symbol | uppercase}} 
                 </a>
                 <div class="color2" ng-show="optionDetails==2">({{ currencie.name }})</div>
-                <coin-infos currencie="{{currencie}}" ng-show="optionDetails==1"/>
+                <coin-infos1 currencie="{{currencie}}" />
         </div>
 
         <div class="col-xs-3 noPadding">
